# embedded-sim

./: .clang-format  CMakeLists.txt
src/: Types.h
src/generic/cxx/: RAII.hpp  StructureTypeUtils.hpp
src/model/: Instruction.h  InstructionType.h  Instruction_private.c  Register.h  Register_private.c
src/model/parameter/: Parameter.c  Parameter.h
src/parser/: CMakeLists.txt  parser.cpp  parser.h
src/proc/: Alu.h  Cpu.h  Cpu_private.c  Ipu.h  Ipu_private.c  alu_private.c
test/: AluTest.cpp  CMakeLists.txt  CPUMock.hpp  CpuTest.cpp  InstructionMock.hpp  ParserTest.cpp  main.cpp
